--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,8 @@
+cmake_minimum_required(VERSION 3.20)
+
+set(CMAKE_C_STANDARD 17)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+
+project(container VERSION 0.1 LANGUAGES C)
+
 add_subdirectory(src)
